# scdlang

./: .clippy.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hooks4git.ini  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Pipfile  README.md  azure-pipelines.yml  matplotlibrc  pnpm-workspace.yml  setup.cfg
.github/: FUNDING.yml  entrypoint.sh  main.workflow  perf.workflow  profiler.sh
.github/action/perf/: Dockerfile  entrypoint.sh  wrap-args.py
.github/action/summarize-perf/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: perf.yml  test.yml
docker/: Alpine.Dockerfile  Dockerfile  Scratch.Dockerfile  azure-pipelines.yml
docs/: ci_pipelines.dot  hook_cli.dot
examples/: buzzer.scl  flip-flop.scl  multi-line.scl  pedestrian-traffic-light.scl  simple.scl
examples/rust/: Cargo.toml
examples/rust/src/: main.rs  my_system.rs  statechart.rs
scripts/: commitguard.py  gensample.py  package.sh  perfquick.sh  perfsum.py  summary.sh  version.py
src/: main.rs  statechart.rs
src/templates/: Rust.md
templates/rust/: atomic.rs
tests/fixtures/: Traffic Light.md
tests/fixtures/semantic_errors/: event.md  transient_transition.md
tests/fixtures/syntax/: action.md  builtin.md  event.md  import.md  internal.md  platform.md  service.md  state.md  tag-literal.md
tests/fixtures/wrapper/: Rust.md
