[package]
name = "scdlang"
version = "0.0.0"
authors = ["Fahmi Akbar Wildana <f.a.wildana@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "^0.2"

[[bin]]
name = "scdlang"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations